--- a/index_v2.html
+++ b/index_v2.html
@@ -69,9 +69,10 @@ From The book The Times Complete History of the World "the citadel was mostly co
 
 
 <h1>Fun and Games</h1>
-<h2>Play a game using Aleppo-Arabic <A HREF="games/quiz.html">here</A> or <br></body></h2>
+<h2>Play a cool game to learn Arabic (Aleppo) &#128512; ! </h2> 
+<h2><A HREF="https://s3.eu-west-2.amazonaws.com/halab.info/games/quiz.html">Click to Start Game</A></h2><br></body></h2>
 
-fill the form below if you want to volunteer and build parts of the City playing Minecraft, or if you simply want to contribute to the content of this website: <br>
+You can also fill the form below, if you want to volunteer and build parts of the City playing Minecraft, or if you simply want to contribute to the content of this website: <br>
 <br>
 <table>
   <tr>
