modifying index_v2.html

--- a/index_v2.html
+++ b/index_v2.html
@@ -66,8 +66,6 @@ Aleppo is the second largest city in Syria. Famous for it's citadel, the city is
 From The book The Times Complete History of the World "the citadel was mostly constructed by AZ-Zahir Ghazi, it is one of the greatest fortresses in the north Syria region. The citadel embodied the most recent technologies of its time such as bend entrances and box-machicolations to deter attack"<br>
 <p>A detailed research about the city, written by Meisoon Jumah can be downloaded <a href="https://dk33y2oh4bq75.cloudfront.net/documents/AFutureforAleppo.pdf">by clicking here</a>.</p>
 
-
-
 <h1>Fun and Games</h1>
 <h2>Play a cool game to learn Arabic (Aleppo) &#128512; ! </h2> 
 <h2><A HREF="https://s3.eu-west-2.amazonaws.com/halab.info/games/quiz.html">Click to Start Game</A></h2><br></body></h2>
@@ -81,7 +79,7 @@ You can also fill the form below, if you want to volunteer and build parts of th
 </table>
 <br>
 
-Between the years 2000-2008 some examples of male entertainment were:</li><br>
+Between the years 2000-2008 some examples of male entertainment:</li><br>
 <ul>
   <li>Tarneeb (Cards Game)</li>
   <li>Trex (Cards Game)</li>
@@ -101,29 +99,19 @@ Listen to more facts using this free to enable <a href="https://www.amazon.co.uk
 
 <p>
   <h1>Gastronomy</h1>
-  It is well known in Syria that the food in Aleppo is of high quality.
-  Whether you are looking for a vegetarian Musakah with a Mediterranean flavour, a char grilled spicy kebab, or a the city's speciality 'Kebbah', there is no better place to visit in Syria other than Aleppo.
+  The Aleppo recipes are delicious and can be complicated.
+  Here is a list of some recipes.
   <ul>
   <li><a href="https://fool.halab.info" target="_blank">fool</a></li>
   <li><a href="https://cake.halab.info" target="_blank">cake</a></li>
   </ul>
   </p>
 
-
-
 <p>
   <h1>Numismatics and Notaphily</h1>
- The Syrian Pound, known as the 'Lyra' is the currency of exchange in Syria. 1 Lyra in the early 1990s did not have a strong purchase power. The 'Lyra' coin has the Hawk of Quraish on one of its sides.<br>
- Buying a small pack of a pyramid shaped container of squash juice 'Bon Jus' would cost SP 5. <br>
- The same price tag would be on a packet of the renowned crisp 'Derby'. A bag of white bread known as the 'tourist like bread' would cost about SP 25. <br>
- However, a trip from the New Aleppo area are to parts of the City Centre would only cost SP 5 in a crowded mini bus, known among the locals as the 'micro'.<br>
- The notes and coins in the 1990s were a 50 pence conin, 1 Syrian pound coin,a fiver,a tenner, SP 25 note, SP 50 note, SP 100 note, SP 500 note. <br>
- Locally, the 50 pence is called 'Kursh', and the 500 'Tarboosh'. The SP 500 was called 'Tarboosh' due to the image of Nevertity on it. <br>
- In the late 1990s and early 2000s the fiver, and tenner notes were pulled from cerculation and supstituted with coins. A gold like color edged SP 25 coin, a SP 2 coin, a 200 note, and a 1000 note were also introduced<br>
- A branch of the Syrian Bank in Aleppo was located near the Ugarit Cinema, offering cash withdrawl and deposit services.<br>
+ Here are some specimens of withdrawn Syrian bank notes. 
 
-
- <h3 class="w3-center">Five Syrian Pounds, 1991</h3>
+<h3 class="w3-center">Five Syrian Pounds, 1991</h3>
 
  <div class="w3-content w3-display-container">
    <img class="Slides_one" src="https://s3.eu-west-2.amazonaws.com/halab.info/numismatics/five_a.jpg" style="width:30%">
@@ -163,8 +151,6 @@ Listen to more facts using this free to enable <a href="https://www.amazon.co.uk
   <button class="w4-button w3-black w4-display-right" onclick="plusDivs(1)">&#10095;</button>
 </div>
 
-
-
 <script>
     var slideIndex = 1;
     showDivs(slideIndex);
@@ -189,7 +175,7 @@ Listen to more facts using this free to enable <a href="https://www.amazon.co.uk
 
       <p>
   <h1>Music</h1>
-  Just like food, music in Syria has a great deal of varaity. From Aleppo the tenor singer Sabah Fakhri sings tunes with complex lyrics from the "Al-Andalus" region poetry. Sabah Fakhri's music could be categorize under the secular music genre. The artist is very well known, and his music is admired by a lot of people. </br> In one of his tunes, Sabah sings about a brown fish, fished in the afternoon. The fish was fished by a skilled fisherman, and sold by an outstanding salesman. And in another tune asking for the wine of love, which is the cure of his heart's pains. The tune continues to mention that life without love, is like a small river without water. As a fun fact, 'a small river' in Arabic is said and written the same way  as 'spread sheet'. Also, 'Sabah' means morning. </br>
+  
   <br/>
 
 <audio controls>
@@ -198,15 +184,13 @@ Listen to more facts using this free to enable <a href="https://www.amazon.co.uk
 
 </audio>
 </br>
- sample "Dabkeh" music famous in the Syrian coast.
+Music famous in the Syrian coast.
 </br>
  <video width="320" height="240" controls>
   <source src="https://dk33y2oh4bq75.cloudfront.net/videos/Sabah_Fhakri_Touring_Club_Edited.mp4" type="video/mp4">
 </video>
 </br>
-Sabah Fakhri in a concert in Aleppo's Touring Club, in the early hours of the morning. Using a mobile phone camera...
-</br>
-  </p>
+Sabah Fakhri in a concert in Aleppo's Touring Club.
 
 <p>
 <h1>Photos</h1>
@@ -252,10 +236,8 @@ Sabah Fakhri in a concert in Aleppo's Touring Club, in the early hours of the mo
 
 <p>
 <h1>Education</h1>
-School education is mandatory and free, the highest degree in school is called the Bacalorya. Which is known to be very difficult and complicated.
-Top students go to medicine school. The education mile stone before is the 9th grade, called Prouver.
-The society conciders students who get a high grade in the 9th grade that enables them to continue science related theoretical studies, 'better' than those who
-achive less and therefore have to go to a technical or a non-science college.
+School education is mandatory and free, the highest degree in school is called the Bacalorya.
+
 
 <style style="text/css">
   .marquee-outer {
