removing video and reducing content

--- a/index_v2.html
+++ b/index_v2.html
@@ -62,9 +62,8 @@ Here is an example that builds a facade of a building with a click of button. </
   </p>
 
 <h1>Some facts</h1>
-Aleppo is the second largest city in Syria. Famous for it's citadel, the city is one of the oldest continuously inhabited cities in the world; it may have been inhabited since the 6th millennium BC.
-From The book The Times Complete History of the World "the citadel was mostly constructed by AZ-Zahir Ghazi, it is one of the greatest fortresses in the north Syria region. The citadel embodied the most recent technologies of its time such as bend entrances and box-machicolations to deter attack"<br>
-<p>A detailed research about the city, written by Meisoon Jumah can be downloaded <a href="https://dk33y2oh4bq75.cloudfront.net/documents/AFutureforAleppo.pdf">by clicking here</a>.</p>
+Aleppo is the second largest city in Syria. Famous for it's citadel, the city is one of the oldest continuously inhabited cities in the world; it may have been inhabited since the 6th millennium BC.<br>
+<p>A research about the city, can be downloaded here: <a href="https://dk33y2oh4bq75.cloudfront.net/documents/AFutureforAleppo.pdf">by clicking here</a>.</p>
 
 <h1>Fun and Games</h1>
 <h2>Play a cool game to learn Arabic (Aleppo) &#128512; ! </h2> 
@@ -78,20 +77,6 @@ You can also fill the form below, if you want to volunteer and build parts of th
   </tr>
 </table>
 <br>
-
-Between the years 2000-2008 some examples of male entertainment:</li><br>
-<ul>
-  <li>Tarneeb (Cards Game)</li>
-  <li>Trex (Cards Game)</li>
-  <li>Counter-Strike (Video game)
-  <li>Unreal Tournament (Video game)</li>
-  <li>Red Alert (Video game)</li>
-  <li>Cabarets </li>
-  <li>Show-off driving</li>
-  <li>Chess</li>
-  <li>Backgammon</li>
-  <li>Pool</li>
-</ul>
 
 Listen to more facts using this free to enable <a href="https://www.amazon.co.uk/Mo-Jumah-Aleppo-Facts/dp/B08CSGC79Z/ref=sr_1_1?dchild=1&keywords=aleppo&qid=1599955193&s=digital-skills&sr=1-1Alexa Skill" target="_blank">Alexa Skill</a>
 </p>
@@ -173,25 +158,6 @@ Listen to more facts using this free to enable <a href="https://www.amazon.co.uk
 
 </p>
 
-      <p>
-  <h1>Music</h1>
-  
-  <br/>
-
-<audio controls>
-
-  <source src="https://s3.eu-west-2.amazonaws.com/halab.info/music/costal_dabkeh.mp3" type="audio/mpeg">
-
-</audio>
-</br>
-Music famous in the Syrian coast.
-</br>
- <video width="320" height="240" controls>
-  <source src="https://dk33y2oh4bq75.cloudfront.net/videos/Sabah_Fhakri_Touring_Club_Edited.mp4" type="video/mp4">
-</video>
-</br>
-Sabah Fakhri in a concert in Aleppo's Touring Club.
-
 <p>
 <h1>Photos</h1>
 
@@ -225,154 +191,5 @@ Sabah Fakhri in a concert in Aleppo's Touring Club.
 
 </p>
 
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-
-<p>
-<h1>Education</h1>
-School education is mandatory and free, the highest degree in school is called the Bacalorya.
-
-
-<style style="text/css">
-  .marquee-outer {
-   height: 100px;
-   overflow: hidden;
-   position: relative;
-   color: black;
-  }
-  .marquee-inner {
-   position: absolute;
-   width: 100%;
-   height: 100%;
-   margin: 0;
-   line-height: 50px;
-   text-align: center;
-   /* Starting position */
-   -moz-transform:translateX(100%);
-   -webkit-transform:translateX(100%);
-   transform:translateX(100%);
-   /* Apply animation to this element */
-   -moz-animation: scroll-left 8s linear infinite;
-   -webkit-animation: scroll-left 8s linear infinite;
-   animation: scroll-left 8s linear infinite;
-  }
-  /* Move it (define the animation) */
-  @-moz-keyframes scroll-left {
-   0%   { -moz-transform: translateX(100%); }
-   100% { -moz-transform: translateX(-100%); }
-  }
-  @-webkit-keyframes scroll-left {
-   0%   { -webkit-transform: translateX(100%); }
-   100% { -webkit-transform: translateX(-100%); }
-  }
-  @keyframes scroll-left {
-   0%   {
-   -moz-transform: translateX(100%); /* Browser bug fix */
-   -webkit-transform: translateX(100%); /* Browser bug fix */
-   transform: translateX(100%);
-   }
-   100% {
-   -moz-transform: translateX(-100%); /* Browser bug fix */
-   -webkit-transform: translateX(-100%); /* Browser bug fix */
-   transform: translateX(-100%);
-   }
-  }
-  </style>
-
-  <div class="marquee-outer">
-<table style="width:100%">
-    <tr>
-
-<td><div class="marquee-inner"><img src="https://s3.eu-west-2.amazonaws.com/halab.info/brands/University_of_Aleppo_Logo.jpg" width="100" height="98" alt="university"></td>
-  </tr>
-</table>
-  </div>
-
-  </p>
-  <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script>
-    function submitToAPI(e) {
-        e.preventDefault();
-        var URL = "https://q1gttc2hp6.execute-api.eu-west-2.amazonaws.com/prod/asker";
-
-        var Namere = /[A-Za-z]{1}[A-Za-z]/;
-        if (!Namere.test($("#name-input").val())) {
-            alert("Name can not be less than 2 letters");
-            return;
-        }
-        var mobilere = /[0-9]{10}/;
-        if (!mobilere.test($("#phone-input").val())) {
-            alert("Please enter valid mobile number");
-            return;
-        }
-        if ($("#email-input").val() == "") {
-           alert("Please enter your email id");
-            return;
-        }
-
-        var reeamil = /^([\w-\.]+@([\w-]+\.)+[\w-]{2,6})?$/;
-        if (!reeamil.test($("#email-input").val())) {
-            alert("Please enter valid email address");
-            return;
-        }
-
-        var name = $("#name-input").val();
-        var phone = $("#phone-input").val();
-        var email = $("#email-input").val();
-        var desc = $("#description-input").val();
-        var data = {
-            name: name,
-            phone: phone,
-            email: email,
-            desc: desc
-        };
-
-        $.ajax({
-            type: "POST",
-            url: "https://q1gttc2hp6.execute-api.eu-west-2.amazonaws.com/prod/asker",
-            dataType: "json",
-            crossDomain: "true",
-            contentType: "application/json; charset=utf-8",
-            data: JSON.stringify(data),
-
-            success: function() {
-                // clear form and show a success message
-                alert("Successfull");
-                document.getElementById("contact-form").reset();
-                location.reload();
-            },
-            error: function() {
-                // show an error message
-                alert("Thanks for submiting your interest in volunteering, someone will be intouch with you soon");
-                document.getElementById("contact-form").reset();
-                location.reload();
-            }
-        });
-    }
-    </script>
-    </head>
-    <body>
-    <h1>Do you want to volunteer and work jointly on building this website about Aleppo ?</h1>
-        <form id="contact-form" method="post">
-            <h4>Name:</h4>
-            <input type="text" style="height:35px;" id="name-input" placeholder="Enter name here…" class="form-control" style="width:100%;" /><br/>
-            <h4>Phone:</h4>
-            <input type="phone" style="height:35px;" id="phone-input" placeholder="Enter phone number" class="form-control" style="width:100%;"/><br/>
-            <h4>Email:</h4>
-            <input type="email" style="height:35px;" id="email-input" placeholder="Enter email here…" class="form-control" style="width:100%;"/><br/>
-            <h4>How can you help?</h4>
-            <textarea id="description-input" rows="3" placeholder="Enter your message…" class="form-control" style="width:100%;"></textarea><br/>
-            <div class="g-recaptcha" data-sitekey="6Lc7cVMUAAAAAM1yxf64wrmO8gvi8A1oQ_ead1ys" class="form-control" style="width:100%;"></div>
-            <button type="button" onClick="submitToAPI(event)" class="btn btn-lg" style="margin-top:20px;">Submit</button>
-        </form>
-
-    </body>
 </body>
 </html>
