adding menue and fixing bug

--- a/index_v2.html
+++ b/index_v2.html
@@ -4,8 +4,10 @@
 <div class="topnav">
   <a class="active" href="#home">Home</a>
   <a href="#food">Food</a>
-  <a href="#contact">Bank Notes Archives</a>
-  <a href="#about">Photos</a>
+  <a href="#bank-notes">Bank Notes Archives</a>
+  <a href="#photos">Photos</a>
+  <a href="#education">Education</a>
+  <a href="#medicine">Medicine</a>
 </div>
 
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
@@ -64,6 +66,7 @@ Listen to more facts using this free to enable <a href="https://www.amazon.co.uk
   <ul>
   <li><a href="https://fool.halab.info" target="_blank">fool</a></li>
   <li><a href="https://cake.halab.info" target="_blank">cake</a></li>
+  <li><a href="https://pudding.halab.info" target="_blank">pudding</a></li>
   </ul>
   </p>
 
@@ -131,14 +134,14 @@ Listen to more facts using this free to enable <a href="https://www.amazon.co.uk
         }
         </script>
 
-<h3 class="w4-center">Five Hundred Syrian Pounds, 1998</h3>
+<h3 class="w8-center">Five Hundred Syrian Pounds, 1998</h3>
 
-<div class="w4-content w4-display-container">
-  <img class="mySlides_two" src="https://s3.eu-west-2.amazonaws.com/halab.info/numismatics/five_hundred_a.jpg" style="width:30%">
-  <img class="mySlides_two" src="https://s3.eu-west-2.amazonaws.com/halab.info/numismatics/five_hundred_b.jpg" style="width:30%">
+<div class="w8-content w8-display-container">
+  <img class="mySlides_three" src="https://s3.eu-west-2.amazonaws.com/halab.info/numismatics/five_hundred_a.jpg" style="width:30%">
+  <img class="mySlides_three" src="https://s3.eu-west-2.amazonaws.com/halab.info/numismatics/five_hundred_b.jpg" style="width:30%">
 
-  <button class="w4-button w4-black w4-display-left" onclick="plusDivs(-1)">&#10094;</button>
-  <button class="w4-button w3-black w4-display-right" onclick="plusDivs(1)">&#10095;</button>
+  <button class="w8-button w8-black w8-display-left" onclick="plusDivs(-1)">&#10094;</button>
+  <button class="w8-button w3-black w8-display-right" onclick="plusDivs(1)">&#10095;</button>
 </div>
 
 <script>
@@ -151,7 +154,7 @@ Listen to more facts using this free to enable <a href="https://www.amazon.co.uk
 
         function showDivs(n) {
           var i;
-          var x = document.getElementsByClassName("mySlides_two");
+          var x = document.getElementsByClassName("mySlides_three");
           if (n > x.length) {slideIndex = 1}
           if (n < 1) {slideIndex = x.length}
           for (i = 0; i < x.length; i++) {
