adding new photo

--- a/index_v2.html
+++ b/index_v2.html
@@ -197,6 +197,13 @@ Listen to more facts using this free to enable <a href="https://www.amazon.co.uk
   <div class="desc">Family in a suberb north of Aleppo </div>
 </div>
 
+<div class="gallery">
+  <a target="_blank" href="https://s3.eu-west-2.amazonaws.com/halab.info/photos/donkey-and-friends.jpg">
+    <img src="https://s3.eu-west-2.amazonaws.com/halab.info/photos/donkey-and-friends.jpg" alt="image not available" width="600" height="400">
+  </a>
+  <div class="desc">A Donkey and friends </div>
+</div>
+
 </p>
 
 </body>
