--- a/index_v2.html
+++ b/index_v2.html
@@ -61,6 +61,20 @@ Listen to more facts using this free to enable <a href="https://www.amazon.co.uk
 
 <p>
   <h1>Gastronomy</h1>
+  <p>
+    كبة بدون هبرة 
+    المقادير: 
+برغل ناعم كوب عدد ١
+ماء مغلي كوب عدد ١/٢
+طحين كوب عدد ١
+ملح ملعقة 
+بصلة مفروم 
+كمون نصف ملعقة 
+
+التحضير:
+عجن الجميع باليد والى البراد لمدة ساعة ثم عجبها باليد مرة ثانية حتى تصبح ناعمة، تغطية لمدة ساعة ثم أقراص (قلي أو سوي)
+    
+    </p>
   The Aleppo recipes are delicious and can be complicated.
   Here is a list of some recipes.
   <ul>
