--- a/index_v2.html
+++ b/index_v2.html
@@ -73,7 +73,35 @@ Listen to more facts using this free to enable <a href="https://www.amazon.co.uk
 
 التحضير:
 عجن الجميع باليد والى البراد لمدة ساعة ثم عجبها باليد مرة ثانية حتى تصبح ناعمة، تغطية لمدة ساعة ثم أقراص (قلي أو سوي)
-    
+الإيج
+برغل ناعم ٢ و ١/٢ كوب و مغسول و مصفى
+و دبس بندورة 
+دبس رمان ملعقة عدد ٢ 
+عصير ليمونة عدد ٢ ، 
+دبس فليفلة ١/٢ ملعقة، 
+زيت زيتون ملعقة عدد ٢ 
+بقدونس كوب عدد واحد مفروم 
+نعناع أخضر ملعقة عدد ٤ مفروم
+ملح
+بصل أخضر ١/٢ كوب مفروم 
+بندورة طازجة ١/٢ كوب مفروم 
+
+    كبة تركية
+المقادير:
+سميد 
+جوز 
+بهارات 
+دبس رمان
+زعتر
+برغل ناعم كوب ٢ 
+بطاطا عدد ٤
+دبس فليفلة كوب 
+زيت زيتون ملعقة عدد ٢
+ماء مغلي ١ و ١/٢ كوب 
+التحضير:
+البطاطا مسلوقة و مبشورة خشن
+خلط السميد و الجوز و البهار و دبس الرمان و الزعتر. ثم غمر البرغل بالماء المغلي مع الملح ساعة واحدة و هرس باليد حتى تصبح كل عجينة. اضافة الخليط السابق ثم اضافة دبس الفليفلة. و البطاطا المبشورة و الزيت و تفرك جيداً ثم تكتل و تقدم 
+
     </p>
   The Aleppo recipes are delicious and can be complicated.
   Here is a list of some recipes.
