--- a/index_v2.html
+++ b/index_v2.html
@@ -111,7 +111,7 @@ Listen to more facts using this free to enable <a href="https://www.amazon.co.uk
   <img class="mySlides_two" src="https://s3.eu-west-2.amazonaws.com/halab.info/numismatics/two_hundred_b.jpg" style="width:30%">
 
   <button class="w4-button w4-black w4-display-left" onclick="plusDivs(-1)">&#10094;</button>
-  <button class="w4-button w3-black w4-display-right" onclick="plusDivs(1)">&#10095;</button>
+  <button class="w4-button w4-black w4-display-right" onclick="plusDivs(1)">&#10095;</button>
 </div>
 
 <script>
@@ -141,7 +141,7 @@ Listen to more facts using this free to enable <a href="https://www.amazon.co.uk
   <img class="mySlides_three" src="https://s3.eu-west-2.amazonaws.com/halab.info/numismatics/five_hundred_b.jpg" style="width:30%">
 
   <button class="w8-button w8-black w8-display-left" onclick="plusDivs(-1)">&#10094;</button>
-  <button class="w8-button w3-black w8-display-right" onclick="plusDivs(1)">&#10095;</button>
+  <button class="w8-button w8-black w8-display-right" onclick="plusDivs(1)">&#10095;</button>
 </div>
 
 <script>
@@ -202,6 +202,13 @@ Listen to more facts using this free to enable <a href="https://www.amazon.co.uk
     <img src="https://s3.eu-west-2.amazonaws.com/halab.info/photos/donkey-and-friends.jpg" alt="image not available" width="600" height="400">
   </a>
   <div class="desc">A Donkey and friends </div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="https://s3.eu-west-2.amazonaws.com/halab.info/photos/old-lady.jpg">
+    <img src="https://s3.eu-west-2.amazonaws.com/halab.info/photos/old-lady.jpg" alt="image not available" width="600" height="400">
+  </a>
+  <div class="desc">A woman sitting on the floor next to a fuel oil heater and baking </div>
 </div>
 
 </p>
