--- a/index_v2.html
+++ b/index_v2.html
@@ -143,8 +143,8 @@ Listen to more facts using this free to enable <a href="https://www.amazon.co.uk
   <img class="mySlides_two" src="https://s3.eu-west-2.amazonaws.com/halab.info/numismatics/two_hundred_a.jpg" style="width:30%">
   <img class="mySlides_two" src="https://s3.eu-west-2.amazonaws.com/halab.info/numismatics/two_hundred_b.jpg" style="width:30%">
 
-  <button class="w4-button w4-black w4-display-left" onclick="plusDivs(-1)">&#10094;</button>
-  <button class="w4-button w4-black w4-display-right" onclick="plusDivs(1)">&#10095;</button>
+  <button class="w4-button w4-black w4-display-left" onclick="plusDivs_two(-1)">&#10094;</button>
+  <button class="w4-button w4-black w4-display-right" onclick="plusDivs_two(1)">&#10095;</button>
 </div>
 
 <script>
@@ -173,8 +173,8 @@ Listen to more facts using this free to enable <a href="https://www.amazon.co.uk
   <img class="mySlides_three" src="https://s3.eu-west-2.amazonaws.com/halab.info/numismatics/five_hundred_a.jpg" style="width:30%">
   <img class="mySlides_three" src="https://s3.eu-west-2.amazonaws.com/halab.info/numismatics/five_hundred_b.jpg" style="width:30%">
 
-  <button class="w8-button w8-black w8-display-left" onclick="plusDivs(-1)">&#10094;</button>
-  <button class="w8-button w8-black w8-display-right" onclick="plusDivs(1)">&#10095;</button>
+  <button class="w8-button w8-black w8-display-left" onclick="plusDivs_three(-1)">&#10094;</button>
+  <button class="w8-button w8-black w8-display-right" onclick="plusDivs_three(1)">&#10095;</button>
 </div>
 
 <script>
