adding style to the top navigation

--- a/index_v2.html
+++ b/index_v2.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 
+<link rel="stylesheet" type="text/css" href="https://s3.eu-west-2.amazonaws.com/halab.info/mystyle.css"> 
+<link rel="stylesheet" type="text/css" href="https://s3.eu-west-2.amazonaws.com/mystyle_two.css"> 
+<!-- <link rel="stylesheet" href="https://use.typekit.net/mdv5bbe.css"> -->
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+
 <div class="topnav">
   <a class="active" href="#home">Home</a>
   <a href="#food">Food</a>
@@ -12,10 +18,10 @@
 
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <body>
-<link rel="stylesheet" type="text/css" href="https://s3.eu-west-2.amazonaws.com/halab.info/mystyle.css">
+<!-- <link rel="stylesheet" type="text/css" href="https://s3.eu-west-2.amazonaws.com/halab.info/mystyle.css"> -->
 <!-- <link rel="stylesheet" href="https://use.typekit.net/mdv5bbe.css"> -->
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+<!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
+<!-- <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet"> -->
 
 <h1>The City of Aleppo</h1>
 A website with photos and information about the City of Aleppo. </br>
@@ -64,6 +70,7 @@ Listen to more facts using this free to enable <a href="https://www.amazon.co.uk
 
 التحضير:
 عجن الجميع باليد والى البراد لمدة ساعة ثم عجبها باليد مرة ثانية حتى تصبح ناعمة، تغطية لمدة ساعة ثم أقراص (قلي أو سوي)
+
 الإيج
 برغل ناعم ٢ و ١/٢ كوب و مغسول و مصفى
 و دبس بندورة 
@@ -76,6 +83,7 @@ Listen to more facts using this free to enable <a href="https://www.amazon.co.uk
 ملح
 بصل أخضر ١/٢ كوب مفروم 
 بندورة طازجة ١/٢ كوب مفروم 
+
 
     كبة تركية
 المقادير:
