fixing link in style

--- a/index_v2.html
+++ b/index_v2.html
@@ -2,7 +2,7 @@
 <html>
 
 <link rel="stylesheet" type="text/css" href="https://s3.eu-west-2.amazonaws.com/halab.info/mystyle.css"> 
-<link rel="stylesheet" type="text/css" href="https://s3.eu-west-2.amazonaws.com/mystyle_two.css"> 
+<link rel="stylesheet" type="text/css" href="https://s3.eu-west-2.amazonaws.com/halab.info/mystyle_two.css"> 
 <!-- <link rel="stylesheet" href="https://use.typekit.net/mdv5bbe.css"> -->
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
