--- a/index_v2.html
+++ b/index_v2.html
@@ -3,7 +3,7 @@
 
 <link rel="stylesheet" type="text/css" href="https://s3.eu-west-2.amazonaws.com/halab.info/mystyle.css"> 
 <link rel="stylesheet" type="text/css" href="https://s3.eu-west-2.amazonaws.com/halab.info/mystyle_two.css"> 
-<!-- <link rel="stylesheet" href="https://use.typekit.net/mdv5bbe.css"> -->
+
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 
@@ -18,10 +18,7 @@
 
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <body>
-<!-- <link rel="stylesheet" type="text/css" href="https://s3.eu-west-2.amazonaws.com/halab.info/mystyle.css"> -->
-<!-- <link rel="stylesheet" href="https://use.typekit.net/mdv5bbe.css"> -->
-<!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
-<!-- <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet"> -->
+
 
 <h1>The City of Aleppo</h1>
 A website with photos and information about the City of Aleppo. </br>
@@ -49,9 +46,15 @@ Aleppo is the second largest city in Syria. Famous for it's citadel, the city is
 <p>A research about the city, can be downloaded here: <a href="https://dk33y2oh4bq75.cloudfront.net/documents/AFutureforAleppo.pdf">by clicking here</a>.</p>
 
 <h1>Fun and Games</h1>
-<h2>Play a cool game to learn Arabic (Aleppo) &#128512; ! </h2> 
-<h2><A HREF="https://s3.eu-west-2.amazonaws.com/halab.info/games/quiz.html">Click to Start Game</A></h2><br></body></h2>
+<ul>
 
+
+<li><h2>An online dice &#127922;</h2></li>
+<A HREF="https://s3.eu-west-2.amazonaws.com/halab.info/games/dice.html">Click to roll two dice</A></h2><br></body>
+<li><h2>Play a cool game to learn Arabic (Aleppo) &#128512; ! </h2> </li>
+<A HREF="https://s3.eu-west-2.amazonaws.com/halab.info/games/quiz.html">Click to Start Game</A></h2><br></body></h2>
+
+</ul>
 Listen to more facts using this free to enable <a href="https://www.amazon.co.uk/Mo-Jumah-Aleppo-Facts/dp/B08CSGC79Z/ref=sr_1_1?dchild=1&keywords=aleppo&qid=1599955193&s=digital-skills&sr=1-1Alexa Skill" target="_blank">Alexa Skill</a>
 </p>
 </p>
